# Stranded2pp

./: CMakeLists.txt  COMPILING.md  README.md  TODO.md
source/window/: Window.cpp  Window.h
